--- a/css/menu.css
+++ b/css/menu.css
@@ -142,11 +142,12 @@ background:transparent;
       margin-left: 40px;
     }
     .nav2{
-      margin-left: 60px;
+      margin-left: 20px;
+      font-size: 17px;
     }
  
     .nav3 p{
-      margin-right: 110px;
+      margin-right: 80px;
     }
     
     .text_p{
@@ -237,11 +238,11 @@ left: calc(50% - 600px);
   
 }
 @media screen and (max-width: 1370px){
-  .nav2{ margin-left: 10px; margin-top: -22px;}
-  .nav3 p{ margin-left: -130px;}
+  .nav2{ margin-left: -40px; margin-top: -22px; font-size: 17px;}
+  .nav3 p{ margin-left: -150px;}
   .img2{ width: 55% !important;
-  height: 30% !important;
-;}
+  height: 50% !important;
+}
 }
 @media screen and (max-width: 1250px){
   .img1{
