--- a/css/menu3.css
+++ b/css/menu3.css
@@ -7,7 +7,18 @@
     }
 
     
-
+    .social-link{
+      font-size: 26px;
+      margin-top: -25px;
+      margin-right: 40px;
+      float: right;
+    }
+    .social-link i:hover{
+      color: #F60018;
+  
+      transition: .5s;
+    }
+  
     .nav-item{
 
     padding:0 10px;
