--- a/css/Menu_our_partners.css
+++ b/css/Menu_our_partners.css
@@ -256,9 +256,12 @@ left: calc(50% - 600px);
   }
   .img2{
 margin-left: -14px;
-width: 45% !important;
+width: 40% !important;
 height: 49.2% !important;
   }
+  .bubble{width: 900px;left:-250px;}
+  .rectangle{width: 930px;}
+  .triangle-r{ left: 900px;}
   .text_p{
     max-width: 65%;
     margin-left: 55px;
@@ -273,22 +276,24 @@ height: 49.2% !important;
     .nav2{
       max-width: 90%;
   margin-top: -25px;
-      font-size:15.5px;
-      
-            left: calc(50% - 655px);
+      font-size:14px;
+  
+            left: calc(50% - 745px);
       
       }
       .nav2 a{
-        margin-left: 73px;
+        margin-left: 63px;
+       
       }
       .nav3 {
         max-width: 85%;
         font-size:14px;
-        margin-left:-100px;
-        left: calc(50% - 706px);
+        margin-left:-175px;
+        left: calc(50% - 806px);
         margin-bottom: 45px;
       }
-      .nav3 p{margin-left: -10px;}
+      .nav3 p{margin-left: -55px; font-size: 14px !important;}
+    .tic{width: 102.6%;}
       .tic h1{
         font-size: 28px;
       }
@@ -314,12 +319,20 @@ width: 0.1%;
      .form{
        margin-left: 20px;
      }
+     .burger-link{
+       display: block;
+     }
       .burger-link{
         margin-top: 30px;
       }
+      .footer{width: 103%;}
 .tic{
   margin-top: -100px;
+  width: 103%;
 }
+.bubble{width: 800px;left:-180px;}
+  .rectangle{width: 830px;}
+  .triangle-r{ left: 800px;}
 .ribbon1{
   margin-left: 280px;
 }
@@ -334,6 +347,9 @@ width: 0.1%;
   .form{
     margin-left: 4px;
   }
+  .bubble{width: 700px;left:-140px;}
+  .rectangle{width: 730px;}
+  .triangle-r{ left: 700px;}
   .burger-link span{
     color: #fff;
   }
@@ -351,9 +367,26 @@ width: 0.1%;
 @media screen and (max-width: 600px) {
   
   .ribbon{height: 40px; margin-top: 30px; }
+  .tic{width: 107%;}
   .tic p{
     margin-top: -20px;
   }
+  .bubble{width: 400px;left:13px;}
+  .rectangle{width: 430px;}
+  .triangle-r{ left: 400px;}
+  .info_box{margin-top: 40px; margin-left: 15px;}
+  .info p{font-size: 15px !important;}
+  #info9{margin-top: 40px;}
+  #container a{margin-left: 20px;}
+  .floatation{margin-left: -20px !important;}
+  #info1{margin-top: 40px;}
+  #info2{margin-top: 40px;}
+  #info3{margin-top: 40px;}
+  #info4{margin-top: 40px;}
+  #info5{margin-top: 40px;}
+  #info6{margin-top: 40px;}
+  #info7{margin-top: 40px;}
+  #info8{margin-top: 40px;}
   .tic h1{
    font-size: 22px;
   margin-bottom: -5px;
@@ -364,22 +397,56 @@ width: 0.1%;
   .ribbon1{height: 40px;right: 100px; width: 60%;
   }
  .footer{
+   width: 122.5%;
    font-size: 12px;
-   margin-left: -90px;
+   margin-left: -70px;
  }
 }
 
-@media screen and(max-height: 650px ){
-  
+@media screen and (max-width: 380px) {
+  .tic{width: 114.8%;}
+  .bubble{width: 380px;left:15px;}
+  .rectangle{width: 410px;}
+  .triangle-r{ left: 380px;}
+  .info_box{margin-top: 40px; margin-left: 15px;}
+  .info p{font-size: 15px !important;}
+  #info9{margin-top: 40px;}
+  #container a{margin-left: 20px;}
+  .floatation{margin-left: -20px !important;}
+  #info1{margin-top: 40px;}
+  #info2{margin-top: 40px;}
+  #info3{margin-top: 40px;}
+  #info4{margin-top: 40px;}
+  #info5{margin-top: 40px;}
+  #info6{margin-top: 40px;}
+  #info7{margin-top: 40px;}
+  #info8{margin-top: 40px;}
+  .footer{width: 133.5%;}
+}
+@media screen and (max-width: 330px){
+  .tic{width: 135%;}
+  .bubble{width: 380px;left:15px;}
+  .rectangle{width: 410px;}
+  .rectangle h2{font-size: 24px; margin-top: 5px;}
+  .triangle-r{ left: 380px;}
+  .info_box{margin-top: 40px; margin-left: 15px;}
+  .info p{font-size: 15px !important;}
+  #info9{margin-top: 40px;}
+  #container a{margin-left: 20px;}
+  .floatation{margin-left: -20px !important;}
+  #info1{margin-top: 40px;}
+  #info2{margin-top: 40px;}
+  #info3{margin-top: 40px;}
+  #info4{margin-top: 40px;}
+  #info5{margin-top: 40px;}
+  #info6{margin-top: 40px;}
+  #info7{margin-top: 40px;}
+  #info8{margin-top: 40px;}
+  .footer{width: 156.5%;}
 }
 @media screen and (max-height: 500px) and (max-width: 1000px){
 
-  .main-information{
-      top: 70%;
-  }
-  .social{
-      top: 180%;
-  }
+ 
 }
 
  
